Added Chart.js Library to plot graph.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>M/M/S Queue Model</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js" integrity="sha256-R4pqcOYV8lt7snxMQO/HSbVCFRPMdrhAFMH+vr9giYI=" crossorigin="anonymous"></script>
   </head>
   <body>
     <header>
@@ -31,9 +32,8 @@
       </div>
 
       <button id="start_btn" type="button">Start Simulation</button>
-
       <main>
-
+        <canvas id="chart" width="1200" height="600"></canvas>
       </main>
 
       <script src="js/app.js"></script>
