Implemented Line Graph Drawing.

--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
       <div id="input2">
         <label for="steps">Steps</label>
         <input id="steps" type="number" name="steps" value="50" defaultValue="50" min="0">
+
+        <label for="speed">Speed</label>
+        <select id="speed" name="speed">
+          <option value="1000">Slow</option>
+          <option value="500">Medium</option>
+          <option value="100">Fast</option>
+          <option value="0">Instant</option>
+        </select>
       </div>
 
       <button id="start_btn" type="button">Start Simulation</button>
