Allow Graph Reset so that a new simulation can be started.

--- a/index.html
+++ b/index.html
@@ -35,11 +35,13 @@
           <option value="1000">Slow</option>
           <option value="500">Medium</option>
           <option value="100">Fast</option>
-          <option value="0">Instant</option>
+          <option value="0">Very Fast</option>
         </select>
       </div>
 
       <button id="start_btn" type="button">Start Simulation</button>
+      <button id="reset_btn" type="button">Reset</button>
+
       <main>
         <canvas id="chart" width="1200" height="600"></canvas>
       </main>
