Apply actual Probability for the Queue Model.

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         </select>
       </div>
 
+      <p id="conditionText">Condition for Simulation: &#955 &lt k&#956</p>
       <button id="start_btn" type="button">Start Simulation</button>
       <button id="reset_btn" type="button">Reset</button>
 
