Enable allow reset of Chart so that another simulation can be started.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
       <p id="conditionText">Condition for Simulation: &#955 &lt k&#956</p>
       <button id="start_btn" type="button">Start Simulation</button>
-      <button id="reset_btn" type="button">Reset</button>
+      <!-- <button id="reset_btn" type="button">Reset</button> -->
 
       <div class="chart_container">
         <canvas id="chart" width="1200" height="600"></canvas>
