--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
       </div>
 
       <p id="conditionText">Condition for Simulation: &#955 &lt k&#956</p>
+      <p style="color: #999999;">Reset before starting a new simulation.</p>
       <button id="start_btn" type="button">Start Simulation</button>
+      <button id="reset_btn" type="button">Reset</button>
 
       <div class="chart_container">
         <canvas id="chart" width="1200" height="600"></canvas>
