Allow simulations that diverge too (unable to simulate previously because I used the wrong method <probability calculation>)

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </select>
       </div>
 
-      <p id="conditionText">Condition for Simulation: &#955 &lt k&#956</p>
+      <p style="color: #555555;">Condition for Simulation that converges: &#955 &#8804 k&#956</p>
       <p style="color: #999999;">Reset before starting a new simulation.</p>
       <button id="start_btn" type="button">Start Simulation</button>
       <button id="reset_btn" type="button">Reset</button>
