--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>M/M/S Queue Model</title>
+    <title>M/M/c Queue Model</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js" integrity="sha256-R4pqcOYV8lt7snxMQO/HSbVCFRPMdrhAFMH+vr9giYI=" crossorigin="anonymous"></script>
   </head>
   <body>
     <header>
-      <h1>M/M/S QUEUE MODEL</h1>
+      <h1>M/M/c Queue Model</h1>
     </header>
 
     <hr/>
